--- a/Vijay Lakade.html
+++ b/Vijay Lakade.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Vijay Lakade</title>
-        <link rel="stylesheet" href="Vijay Lakade.css">
+        <link rel="stylesheet" href="H:/Web Designing/Resume/Vijay Lakade.css">
     </head>
     <body>
         <div class="container">
@@ -15,7 +15,7 @@
                 <div class="Intro group">
                     <!-- Logo -->
                     <div class="VJ">
-                        <img src="VJ.jpg">
+                        <img src="H:/Web Designing/Resume/VJ.jpg">
                     </div>
                     <!-- /Logo -->
                     <!-- About -->
