--- a/Vijay Lakade.html
+++ b/Vijay Lakade.html
@@ -10,7 +10,7 @@
             <!-- This is introduction Part -->
             <header>
                 <!-- Resume -->
-                <span class="resume">Resume</span>
+                <div class="resume">Resume</div>
                 <!-- Intro -->
                 <div class="Intro group">
                     <!-- Logo -->
