--- a/Vijay Lakade.html
+++ b/Vijay Lakade.html
@@ -24,7 +24,7 @@
                         <p>Address: Navi Mumbai, MH, India</p>
                         <P>Contact: +91 96993 30752</P>
                         <P>Email: vjlakade@gmail.com</P>
-                        <p>Website: VijayLakade_Resume</p>
+                        <p>Website: https://vjlakade.github.io/Vijay_Resume/Vijay%20Lakade.html</p>
                     </div>
                     <!-- /About -->
                 </div>
