resize max-width for smart phone

--- a/Vijay Lakade.html
+++ b/Vijay Lakade.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" col-xs-6>
     <head>
         <meta charset="utf-8">
         <title>Vijay Lakade</title>
