container col changed

--- a/Vijay Lakade.html
+++ b/Vijay Lakade.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" col-xs-6>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Vijay Lakade</title>
         <link rel="stylesheet" href="Vijay Lakade.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container col-xs-6">
             <!-- This is introduction Part -->
             <header>
                 <!-- Resume -->
