changed container col

--- a/Vijay Lakade.html
+++ b/Vijay Lakade.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="Vijay Lakade.css">
     </head>
     <body>
-        <div class="container col-xs-6">
+        <div class="container">
             <!-- This is introduction Part -->
             <header>
                 <!-- Resume -->
